added transition to hero

--- a/main.css
+++ b/main.css
@@ -43,6 +43,10 @@ header {
 h1 {
     color:white;
     font-size: 70px;
+    animation: fading;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in ;
 
 }
 
@@ -50,6 +54,10 @@ h3 {
     text-align: center;
     color: white;
     font-size: 70px;
+    animation: fading;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in ;
 }
 
 span {
@@ -74,5 +82,11 @@ span {
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
-
 }
+
+@keyframes fading{
+    from{opacity: 0;}
+    to{opacity: 1;}
+}
+
+
