--- a/main.css
+++ b/main.css
@@ -89,4 +89,29 @@ span {
     to{opacity: 1;}
 }
 
+.latest-product{
+    width: 100%;
+    height: 400px;
+    padding: 40px;
+}
 
+.card-wrapper{
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+}
+
+.card{
+    border-radius: 16px;
+    width: 150px;
+    height: 200px;
+    background: linear-gradient(145deg, rgb(182, 182, 182), rgb(255, 255, 255));
+    box-shadow: 5px 5px 10px rgb(134, 133, 133);
+    margin-block: 20px;
+}
+
+.card-img{
+    width: 100%;
+    border-top-right-radius: 16px;
+    border-top-left-radius: 16px;
+}
