--- a/main.css
+++ b/main.css
@@ -21,8 +21,9 @@ header {
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    width: 100%;
+    width: 100dvw;
     top: 10px;
+    z-index: 2;
 }
 
 .links {
@@ -91,14 +92,17 @@ span {
 
 .latest-product{
     width: 100%;
-    height: 400px;
+    height: auto;
     padding: 40px;
 }
 
 .card-wrapper{
     display: flex;
     gap: 30px;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 30px;
+    animation: shake 8s cubic-bezier(0.455, 0.030, 0.515, 0.955)infinite both;
 }
 
 .card{
@@ -114,4 +118,93 @@ span {
     width: 100%;
     border-top-right-radius: 16px;
     border-top-left-radius: 16px;
+}
+@keyframes shake{
+0%,
+100%{
+    transform: translateX(0);
+}
+10%,
+30%,
+50%,
+70%{
+    transform: translateX(-10px);
+}
+20%,
+40%,
+60%{
+    transform: translateX(10px);
+}
+80%{
+    transform: translateX(8px);
+}
+90%{
+    transform: translateX(-8px);
+}
+}
+
+.hike{
+    height: 300px;
+    font-weight: bold;
+    background: linear-gradient(145deg, rgb(23, 57, 168), rgb(1, 3, 24));
+    padding: 20px;
+    color: white;
+    border-radius: 5px;
+}
+.inner-hike{
+    padding: 10px;
+max-width: 600px;
+border: 1px solid whitesmoke;
+border-radius: 5px;
+margin: auto;
+background-color: rgba(0, 0, 0, 0.158);
+height: 100%;
+
+}
+button{
+width: 100px;
+border-radius: 5px;
+background-color: rgb(23, 84, 197);
+color: white;
+padding: 10px;
+}
+button:hover{
+    background-color:  rgb(3, 15, 36);;
+}
+
+
+
+input{
+    padding: 10px;
+    margin-block: 10px;
+    background-color: transparent;
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 100%;
+    color: white;
+}
+footer{
+    display: flex;
+    font-weight: bold;
+    justify-content: center;
+    padding: 20px;
+    color: rgb(3, 33, 87);
+    background: whitesmoke
+}
+.foot{
+    text-align: center;
+}
+
+
+@media(max-width:320px){
+    h1 {
+        color:white;
+        font-size: 40px;
+        animation: fading;
+        animation-duration: 3s;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in ;
+        margin-top: 100px;
+        }
+       
 }
